[package]
name = "tictoc"
version = "0.1.3"
authors = ["Alejandro Llanes <sombra.libre@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A time duration profiling library."
homepage = "https://github.com/sombralibre/tictoc"
repository = "https://github.com/sombralibre/tictoc"
documentation = "https://docs.rs/tictoc"
readme = "README.md"
keywords = ["date-and-time"]

[dependencies]
chrono = {version = "0.4", optional = true}

[features]
default = ["chrono", "chrono/unstable-locales"]
localtime = ["chrono"]